[package]
name = "diff-parse"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Mueller <deso@posteo.net>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/diff-parse"
repository = "https://github.com/d-e-s-o/diff-parse.git"
description = """
A crate for parsing unified diffs.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = {version = "1.10.0", default-features = false, features = ["std"]}
regex = {version = "1.5.5", default-features = false, features = ["perf", "std"]}
